syntax = "proto3";

package envoy.extensions.filters.http.decompressor.v3;

import "envoy/config/core/v3/base.proto";
import "envoy/config/core/v3/extension.proto";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.decompressor.v3";
option java_outer_classname = "DecompressorProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Decompressor]
// Decompressor :ref:`configuration overview <config_http_filters_decompressor>`.

// [#not-implemented-hide:]
message Decompressor {
  message CommonConfig {
    // Runtime flag that controls whether the filter is enabled for decompression or not. If set to false, the
    // filter will operate as a pass-through filter. If the message is unspecified, the filter will be enabled.
    config.core.v3.RuntimeFeatureFlag enabled = 1;

    // If set to true, and the Content-Length header is present, the Decompressor filter will buffer
    // data frames until complete and will update the Content Length header with the inflated size.
    // Otherwise, the filter will remove the Content-Length header (if present) and stream inflated
    // data frames as they are received.
    bool preserve_content_length = 2;
  }


  // Runtime flag that controls whether the filter is enabled for Response decompression or not. If set to false, the
  // filter will operate as a pass-through filter. If the message is unspecified, the filter will be enabled.
  config.core.v3.RuntimeFeatureFlag response_decompression_enabled = 2;

  // A decompressor library to use for decompression. Currently only
  // :ref:`envoy.decompressors.gzip<envoy_api_msg_extensions.decompressors.gzip.v3.Gzip>`
  // is included in Envoy.
  config.core.v3.TypedExtensionConfig decompressor_library = 3
      [(validate.rules).message = {required: true}];
}
